fastmetrics-derive/tests/ui/fail/encode_label_set/unrecognized_attr.rs
use fastmetrics_derive::EncodeLabelSet;

#[derive(EncodeLabelSet)]
struct Labels {
    #[label(unknown)]
    a: u8,
}

fn main() {}
